--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "firebase-admin": "^13.0.1"
+    "firebase-admin": "^13.0.1",
+    "fs": "^0.0.1-security"
   }
 }
